--- a/main.html
+++ b/main.html
@@ -4,9 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
+	<script>
+  let yourArray = ['hello', 42, true, null, 'world'];
+</script>
+	<script>
+  console.log(yourArray[0]); // logs 'hello'
+  console.log(yourArray[1]); // logs 42
+  console.log(yourArray[2]); // logs true
+</script>
+<script>
+  yourArray[1] = 99;
+  console.log(yourArray); // logs ['hello', 99, true, null, 'world']
+</script>
+
+
 	<!-- the entire body must be written by student -->
 	
     <script type="text/javascript" src="./script.js">
